# vulkan-learning

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: app.hpp  color.hpp  constants.hpp  errors.hpp  input.hpp  renderer.hpp  validation.hpp  window.hpp
src/: app.cpp  input.cpp  main.cpp  renderer.cpp  validation.cpp  window.cpp
utils/: CMakeLists.txt
utils/include/: debug-callback.hpp
utils/src/: debug-callback.cpp
